--- a/Fájl áthelyező/app.config
+++ b/Fájl áthelyező/app.config
@@ -37,6 +37,30 @@
             <setting name="receive" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="sourcePecsFile" serializeAs="String">
+                <value>n:\szszard.msg</value>
+            </setting>
+            <setting name="sourcePecsSemFile" serializeAs="String">
+                <value>n:\szszard.sem</value>
+            </setting>
+            <setting name="destinationPecsDir" serializeAs="String">
+                <value>c:\pte_labor\teszt\in</value>
+            </setting>
+            <setting name="sourcePecsLabFile" serializeAs="String">
+                <value>c:\pte_labor\teszt\out\szszard.msg</value>
+            </setting>
+            <setting name="sourcePecsLabSemFile" serializeAs="String">
+                <value>c:\pte_labor\teszt\out\szszard.sem</value>
+            </setting>
+            <setting name="destinationPecsLabDir" serializeAs="String">
+                <value>m:\</value>
+            </setting>
+            <setting name="psend" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="preceive" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Fájl_áthelyező.Properties.Settings>
     </userSettings>
 </configuration>
